As a user I can see my transactions [Delivers #180192147]
